--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/barbearia
 spring.datasource.username=root
 spring.datasource.password=1234
 
+spring.mvc.hiddenmethod.filter.enabled=true
 spring.jpa.hibernate.ddl-auto=update
